=== HEAD

* Make Dataset#with_sql treat a symbol as a first argument as a method name to call to get the SQL (jeremyevans)

* Make Dataset #delete, #insert, #update return array of plain hashes if block not given and Dataset#returning is used (jeremyevans)

* Allow Dataset #map, #to_hash, #select_map, #select_order_map, and #select_hash to take arrays of columns instead of single columns (jeremyevans)

* Make Dataset #delete, #insert, #update yield plain hashes to a block if Dataset#returning is used (jeremyevans)

* Add Dataset#returning for setting the columns to return in INSERT/UPDATE/DELETE statements, used by PostgreSQL 9.1 (jeremyevans)

* Support WITH clause in INSERT/UPDATE/DELETE on PostgreSQL 9.1+ (jeremyevans)

* Add Database#copy_table for PostgreSQL COPY support when using the postgres adapter with pg (jeremyevans)

* Support CREATE TABLE IF NOT EXISTS on PostgreSQL 9.1+ (jeremyevans)

* Add support for Sequel::Model.default_eager_limit_strategy to set the default :eager_limit_strategy for *_many associations (jeremyevans)

* Add support for an :eager_limit_strategy => :correlated_subquery value for limiting using correlated subqueries (jeremyevans)

* Allow use of a dataset that uses the emulated offset support on MSSQL and DB2 in an IN subquery by using a nested subquery (jeremyevans)

* Allow use of a dataset that uses LIMIT in an IN subquery on MySQL by using a nested subquery (jeremyevans)

* Work around serious ActiveSupport bug in Time.=== that breaks literalization of Time values (jeremyevans)

* Speed up SQL operator methods by using module_eval instead of define_method (jeremyevans)

* Support sql_(boolean,number,string) methods on ComplexExpressions, allowing you do to (x + 1).sql_string + 'a' for (x + 1) || 'a' (jeremyevans)

* Don't disallow SQL expression creation based on types, leave that to the database server (jeremyevans)

* Make :column [&|] 1 use an SQL bitwise [&|] expression instead of a logical (AND|OR) expression (jeremyevans)